--- a/client/main.html
+++ b/client/main.html
@@ -3,8 +3,23 @@
 </head>
 <body>
   <fb:login-button
-  scope="public_profile,email"
-  onlogin="checkLoginState();">
+  scope="public_profile,email">
 </fb:login-button>
 <div id="render-target"></div>
+<script>
+    function checkLoginState() {
+      FB.getLoginStatus(function(response) {
+        statusChangeCallback(response);
+      });
+    }
+
+    // Load the SDK asynchronously
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
