--- a/client/main.html
+++ b/client/main.html
@@ -2,16 +2,23 @@
   <title>Why Math Matters</title>
 </head>
 <body>
-    {{> login}}
+<div id="fb-root"></div>
+
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&appId=2410241845668819&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+
+function checkLoginState() {
+  console.log('check login called');
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+  });
+}
+</script>
+<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
 <div id="render-target"></div>
 </body>
-
-<template name="login">
-    {{#if currentUser}}
-        Now you're logged in as <strong>{{currentUser.username}}</strong> using {{getEmail}}
-
-        <br> <br> <button class="log-out">Log out</button>
-    {{else}}
-        <button class="log-in" >Facebook Login</button>
-    {{/if}}
-</template>
