--- a/client/main.html
+++ b/client/main.html
@@ -1,24 +1,27 @@
 <head>
   <title>Why Math Matters</title>
+  <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="397630315460-0hsm7fc7unkmmk4g3vvviskfhkfdbuad.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
-<div id="fb-root"></div>
-
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&appId=2410241845668819&autoLogAppEvents=1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-
-function checkLoginState() {
-  console.log('check login called');
-  FB.getLoginStatus(function(response) {
-    statusChangeCallback(response);
-  });
-}
+  <script>
+  idToken = '';
+  function onSignIn(googleUser) {
+    var id_token = googleUser.getAuthResponse().id_token;
+    idToken = id_token;
+  }
+  </script>
+  <span class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></span>
+  <a href="#" onclick="signOut();" class = "link">Sign out</a>
+<script>
+  function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      alert("Signed out");
+    });
+    idToken = '';
+  }
 </script>
-<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="false"></div>
-<div id="render-target"></div>
+  <div id="render-target"></div>
 </body>
